Monthly booking changes

--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
                         </div>
 
                     <div style="margin-bottom:15px;margin-top:15px;">
-                     <input name="term" type="radio" id="fwow" value="4" checked  ng-click="checkMonthlyBooking1(4);"/>
+                     <input name="term" type="radio" id="fwow" value="4" checked  ng-click="checkMonthlyBooking(4);"/>
                         <label for="fwow" style="padding-right:20px;">4 WHEELER</label> 
 
-                        <input name="term" type="radio" id="twow"  value="3"   ng-click="checkMonthlyBooking1(3);"/>
+                        <input name="term" type="radio" id="twow"  value="3"   ng-click="checkMonthlyBooking(3);"/>
                         <label for="twow">2 WHEELER</label>
 
                         <input type="hidden" name="userId" value="{{ user.ID}}" />
