--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
             line-height: 56px;
             color: #fff;
         }
+        .booking-date {
+            font-size: 15px !important;
+            float: right;
+            text-transform: capitalize !important;
+        }
         </style>
 
 
@@ -228,8 +233,10 @@
                                         </div>
                                         <p>
                                             {{booking.rnum}}
-                                            <i ng-click="minout(booking.id, 1)" class="ion-log-in circle" ng-if="booking.checkin_time < booking.checkout_time"></i> 
-                                            <i ng-click="minout(booking.id, 2)" class="ion-log-out circle" ng-if="booking.checkin_time > booking.checkout_time"></i>
+                                            <span class="booking-date"> 
+                                                 {{getBookingDate(booking.booking_time) | date :  "MMM d, y" }} </span>
+                                            <!-- <i ng-click="minout(booking.id, 1)" class="ion-log-in circle" ng-if="booking.checkin_time < booking.checkout_time"></i> 
+                                            <i ng-click="minout(booking.id, 2)" class="ion-log-out circle" ng-if="booking.checkin_time > booking.checkout_time"></i> -->
 
                                         </p>
                                         <span>#{{booking.id}} {{booking.mname}} </span>
