--- a/index.html
+++ b/index.html
@@ -99,12 +99,17 @@
             float: right;
             text-transform: capitalize !important;
         }
+        [ng-cloak]  
+        {  
+        display: none !important;
+        }
+
         </style>
 
 
     </head>
 
-    <body ng-controller="homeCtrl">
+    <body  class="ng-cloak" ng-controller="homeCtrl" ng-cloak>
         <div class="m-scene" id="main"> <!-- Main Container -->
 
             <!-- Left Sidebar -->
