update angular version from 1.6.4 to 1.7.9

--- a/login.html
+++ b/login.html
@@ -69,7 +69,7 @@
         </div>
         <!-- End of Page Container -->
 
-        <script src="cordova.js"></script>
+        <!-- <script src="cordova.js"></script> -->
 
         <script src="js/jquery-2.1.0.min.js"></script>
         <script src="js/jquery.swipebox.min.js"></script>
