--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             </div>-->
         </div>
 
-        <script src="cordova.js"></script>
+        <!-- <script src="cordova.js"></script> -->
 
         <script src="js/jquery-2.1.0.min.js"></script>
         <script src="js/jquery.swipebox.min.js"></script>   
