--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
         <!-- <script src="cordova.js"></script> -->
 
-        <script src="js/jquery-2.1.0.min.js"></script>
+        <script src="js/jquery-3.2.0.min.js"></script>
         <script src="js/jquery.swipebox.min.js"></script>   
         <script src="js/materialize.min.js"></script> 
         <script src="js/swiper.min.js"></script>  
@@ -362,6 +362,9 @@
         <script src="js/angular/angular.min.js"></script>
         <script src="js/angular-sanitize.js"></script>
         <script src="js/app.js"></script>
+        <script>
+            window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, {passive: false});
+        </script>
 
     </body>
 </html>
