--- a/login.html
+++ b/login.html
@@ -71,7 +71,7 @@
 
         <!-- <script src="cordova.js"></script> -->
 
-        <script src="js/jquery-2.1.0.min.js"></script>
+        <script src="js/jquery-3.2.0.min.js"></script>
         <script src="js/jquery.swipebox.min.js"></script>
         <script src="js/jquery.smoothState.min.js"></script>
         <script src="js/materialize.min.js"></script>
@@ -81,6 +81,9 @@
         <script src="js/chart.min.js"></script>
         <script src="js/functions.js"></script>
         <script src="js/myscripts.js"></script>
+        <script>
+            window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, {passive: false});
+        </script>
 </body>
 
 </html>
