update jquery version and remove swipebox js , css

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <link href="css/keyframes.css" rel="stylesheet" type="text/css">
     <link href="css/materialize.min.css" rel="stylesheet" type="text/css">
     <link href="css/swiper.css" rel="stylesheet" type="text/css">
-    <link href="css/swipebox.min.css" rel="stylesheet" type="text/css">
+    <!-- <link href="css/swipebox.min.css" rel="stylesheet" type="text/css"> -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
 
 </head>
@@ -71,8 +71,8 @@
 
         <!-- <script src="cordova.js"></script> -->
 
-        <script src="js/jquery-3.2.0.min.js"></script>
-        <script src="js/jquery.swipebox.min.js"></script>
+        <script src="js/jquery-3.4.1.min.js"></script>
+       <!-- <script src="js/jquery.swipebox.min.js"></script> -->
         <script src="js/jquery.smoothState.min.js"></script>
         <script src="js/materialize.min.js"></script>
         <script src="js/swiper.min.js"></script>
@@ -81,9 +81,6 @@
         <script src="js/chart.min.js"></script>
         <script src="js/functions.js"></script>
         <script src="js/myscripts.js"></script>
-        <script>
-            window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, {passive: false});
-        </script>
-</body>
+      </body>
 
 </html>
