--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <link href="css/materialize.min.css" rel="stylesheet" type="text/css">
         <link href="css/swiper.css" rel="stylesheet" type="text/css">
-        <link href="css/swipebox.min.css" rel="stylesheet" type="text/css">
+        <!-- <link href="css/swipebox.min.css" rel="stylesheet" type="text/css"> -->
         <link href="css/style.css" rel="stylesheet" type="text/css">
 
         <style>
@@ -350,8 +350,8 @@
 
         <!-- <script src="cordova.js"></script> -->
 
-        <script src="js/jquery-3.2.0.min.js"></script>
-        <script src="js/jquery.swipebox.min.js"></script>   
+        <script src="js/jquery-3.4.1.min.js"></script>
+        <!-- <script src="js/jquery.swipebox.min.js"></script>    -->
         <script src="js/materialize.min.js"></script> 
         <script src="js/swiper.min.js"></script>  
         <script src="js/jquery.mixitup.min.js"></script>
@@ -362,9 +362,5 @@
         <script src="js/angular/angular.min.js"></script>
         <script src="js/angular-sanitize.js"></script>
         <script src="js/app.js"></script>
-        <script>
-            window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, {passive: false});
-        </script>
-
-    </body>
+       </body>
 </html>
